force-app/main/default/objects/Cpm_Component_Package__c/Cpm_Component_Package__c.object-meta.xml
<CustomObject>
    <description>This object holds GPBU demo descriptions and install links.</description>
    <label>Demo Component</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>