force-app/main/default/objects/Cpm_Component_Package__c/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <description>Determines how the package was installed</description>
    <inlineHelpText>How was this package installed?</inlineHelpText>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>