force-app/main/default/objects/Cpm_Component_Package__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>DateTime the package record was last modified</description>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>