force-app/main/default/objects/Cpm_Component_Package__c/fields/Latest_Commit_Description__c.field-meta.xml
<CustomField>
    <fullName>Latest_Commit_Description__c</fullName>
    <description>Description of the latest Commit</description>
    <label>Latest Commit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>