force-app/main/default/objects/Cpm_Component_Package__c/fields/Latest_Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Package_Version__c</fullName>
    <label>Latest Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>