force-app/main/default/objects/Cpm_Component_Package__c/fields/Latest_Package_Version_Deprecated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Latest_Package_Version_Deprecated_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leveraged to denote that the current package version is considered &quot;Deprecated&quot; and can no longer be installed. This does not mean that an updated package does not exist, we just don&apos;t know about it.</description>
    <inlineHelpText>Is the latest package found deprecated and unable to be installed?</inlineHelpText>
    <label>Latest Package Version Deprecated Flag</label>
    <type>Checkbox</type>
</CustomField>