force-app/main/default/objects/Cpm_Component_Package__c/fields/Latest_Tag_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Tag_Version_Name__c</fullName>
    <description>Name of the Latest Version Tag</description>
    <label>Latest Tag Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>