force-app/main/default/objects/Cpm_Component_Package__c/fields/New_Component_Flag__c.field-meta.xml
<CustomField>
    <fullName>New_Component_Flag__c</fullName>
    <formula>Date_Added__c &gt;  (NOW() -7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Component Flag</label>
    <type>Checkbox</type>
</CustomField>