force-app/main/default/objects/Cpm_Component_Package__c/fields/Number_of_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependencies__c</fullName>
    <label>Number of Dependencies</label>
    <summaryForeignKey>Cpm_Component_Package_Dependency__c.Cpm_Component_Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>