force-app/main/default/objects/Cpm_Component_Package__c/fields/SFDX_Installed_Package_Version_Desc__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Installed_Package_Version_Desc__c</fullName>
    <label>SFDX Installed Package Version Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>