force-app/main/default/objects/Cpm_Component_Package__c/fields/SFDX_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Package_Name__c</fullName>
    <label>SFDX Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>