force-app/main/default/objects/Cpm_Component_Package__c/fields/Source_Install_Url__c.field-meta.xml
<CustomField>
    <fullName>Source_Install_Url__c</fullName>
    <formula>IF(Source_Install_Type_Flag__c,
  IF($Setup.Cpm_Client_Settings__c.Sandbox_Flag__c, $Setup.Cpm_Client_Settings__c.App_Deployer_URL__c + &apos;?template=&apos; + Github_Repository_URL__c + &apos;&amp;quickdeploy=true&amp;sandbox=true&apos;,$Setup.Cpm_Client_Settings__c.App_Deployer_URL__c+ &apos;?template=&apos; + Github_Repository_URL__c + &apos;&amp;quickdeploy=true&apos;), &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Install Url</label>
    <type>Text</type>
</CustomField>