force-app/main/default/objects/Cpm_Component_Package__c/fields/Source_Installed_Commit_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Installed_Commit_Description__c</fullName>
    <label>Source Installed Commit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>