force-app/main/default/objects/Cpm_Component_Package__c/fields/Subscriber_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Package_Id__c</fullName>
    <label>Subscriber Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>