force-app/main/default/objects/Cpm_Component_Package__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the demo</description>
    <inlineHelpText>The title of the demo</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>