force-app/main/default/objects/Cpm_Component_Package__c/listViews/All_Components.listView-meta.xml
<ListView>
    <fullName>All_Components</fullName>
    <columns>NAME</columns>
    <columns>Installed__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>POC_Name__c</columns>
    <columns>POC_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Installed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Available Components</label>
</ListView>